# src/index.ts
@@ -12,9 +12,7 @@ app.use(express.json());
 
 app.use(auth);
 
-app.use("/health", (req, res) => {
-  res.json({ status: "ok" });
-});
+app.use("/health", (req, res) => res.json({ status: "ok" }));
 
 app.use("/spotify", spotifyRouter);
 
